@@ -8,6 +8,7 @@ S3method(plot,frequent_terms)
 S3method(plot,hierarchical_coverage_regex)
 S3method(plot,hierarchical_coverage_term)
 S3method(plot,ngram_collocations)
+S3method(plot,tag_co_occurrence)
 S3method(plot,term_count)
 S3method(print,accuracy)
 S3method(print,coverage)
@@ -47,6 +48,7 @@ export(probe_list)
 export(search_term)
 export(search_term_which)
 export(split_data)
+export(tag_co_occurrence)
 export(term_count)
 export(uncovered)
 export(weight)
