@@ -43,6 +43,8 @@ NEW FEATURES
   text vector by a term after partitioning out the elements matched by previous
   terms.
 
+* `tag_co_occurrence` added to explore tag co-occurrences.
+
 
 MINOR FEATURES
 
